@@ -10,7 +10,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.TreeMap;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 
 import net.sf.l2j.commons.logging.CLogger;
 import net.sf.l2j.commons.pool.ConnectionPool;
@@ -31,7 +30,7 @@ import net.sf.l2j.gameserver.network.serverpackets.SystemMessage;
 
 public class DerbyTrackManager
 {
-	protected static final CLogger LOGGER = new CLogger(DerbyTrackManager.class.getName());
+	private static final CLogger LOGGER = new CLogger(DerbyTrackManager.class.getName());
 	
 	private static final String SAVE_HISTORY = "INSERT INTO mdt_history (race_id, first, second, odd_rate) VALUES (?,?,?,?)";
 	private static final String LOAD_HISTORY = "SELECT * FROM mdt_history";
@@ -47,10 +46,10 @@ public class DerbyTrackManager
 		RACE_END
 	}
 	
-	protected static final PlaySound SOUND_1 = new PlaySound(1, "S_Race");
-	protected static final PlaySound SOUND_2 = new PlaySound("ItemSound2.race_start");
+	private static final PlaySound SOUND_1 = new PlaySound(1, "S_Race");
+	private static final PlaySound SOUND_2 = new PlaySound("ItemSound2.race_start");
 	
-	protected static final int[][] CODES =
+	private static final int[][] CODES =
 	{
 		{
 			-1,
@@ -66,16 +65,16 @@ public class DerbyTrackManager
 		}
 	};
 	
-	protected final List<Npc> _runners = new ArrayList<>(); // List holding initial npcs, shuffled on a new race.
-	protected final TreeMap<Integer, HistoryInfo> _history = new TreeMap<>(); // List holding old race records.
-	protected final Map<Integer, Long> _betsPerLane = new ConcurrentHashMap<>(); // Map holding all bets for each lane ; values are set to 0 after every race.
-	protected final List<Double> _odds = new ArrayList<>(); // List holding sorted odds per lane ; cleared at new odds calculation.
+	private final List<Npc> _runners = new ArrayList<>(); // List holding initial npcs, shuffled on a new race.
+	private final TreeMap<Integer, HistoryInfo> _history = new TreeMap<>(); // List holding old race records.
+	private final Map<Integer, Long> _betsPerLane = new ConcurrentHashMap<>(); // Map holding all bets for each lane ; values are set to 0 after every race.
+	private final List<Double> _odds = new ArrayList<>(); // List holding sorted odds per lane ; cleared at new odds calculation.
 	
-	protected int _raceNumber = 1;
-	protected int _finalCountdown = 0;
-	protected RaceState _state = RaceState.RACE_END;
+	private int _raceNumber = 1;
+	private int _finalCountdown = 0;
+	private RaceState _state = RaceState.RACE_END;
 	
-	protected MonRaceInfo _packet;
+	private MonRaceInfo _packet;
 	
 	private List<Npc> _chosenRunners; // Holds the actual list of 8 runners.
 	private int[][] _speeds;
@@ -111,7 +110,7 @@ public class DerbyTrackManager
 		
 		_speeds = new int[8][20];
 		
-		ThreadPool.scheduleAtFixedRate(new Announcement(), 0, 1000);
+		ThreadPool.scheduleAtFixedRate(this::countdown, 0, 1000);
 	}
 	
 	public List<Npc> getRunners()
@@ -161,7 +160,7 @@ public class DerbyTrackManager
 	
 	public List<HistoryInfo> getLastHistoryEntries()
 	{
-		return _history.descendingMap().values().stream().limit(8).collect(Collectors.toList());
+		return _history.descendingMap().values().stream().limit(8).toList();
 	}
 	
 	public HistoryInfo getHistoryInfo(int raceNumber)
@@ -174,7 +173,7 @@ public class DerbyTrackManager
 		return _odds;
 	}
 	
-	public void newRace()
+	private void newRace()
 	{
 		// Edit _history.
 		_history.put(_raceNumber, new HistoryInfo(_raceNumber, 0, 0, 0));
@@ -186,7 +185,7 @@ public class DerbyTrackManager
 		_chosenRunners = _runners.subList(0, 8);
 	}
 	
-	public void newSpeeds()
+	private void newSpeeds()
 	{
 		_speeds = new int[8][20];
 		
@@ -243,7 +242,7 @@ public class DerbyTrackManager
 	 * Load past races informations, feeding _history arrayList.<br>
 	 * Also sets _raceNumber, based on latest HistoryInfo loaded.
 	 */
-	protected void loadHistory()
+	private void loadHistory()
 	{
 		try (Connection con = ConnectionPool.getConnection();
 			PreparedStatement ps = con.prepareStatement(LOAD_HISTORY);
@@ -268,30 +267,9 @@ public class DerbyTrackManager
 	}
 	
 	/**
-	 * Save an {@link HistoryInfo} record into database.
-	 * @param history The HistoryInfo to store.
-	 */
-	protected void saveHistory(HistoryInfo history)
-	{
-		try (Connection con = ConnectionPool.getConnection();
-			PreparedStatement ps = con.prepareStatement(SAVE_HISTORY))
-		{
-			ps.setInt(1, history.getRaceId());
-			ps.setInt(2, history.getFirst());
-			ps.setInt(3, history.getSecond());
-			ps.setDouble(4, history.getOddRate());
-			ps.execute();
-		}
-		catch (Exception e)
-		{
-			LOGGER.error("Can't save Derby Track history.", e);
-		}
-	}
-	
-	/**
 	 * Load current bets per lane ; initialize the map keys.
 	 */
-	protected void loadBets()
+	private void loadBets()
 	{
 		try (Connection con = ConnectionPool.getConnection();
 			PreparedStatement ps = con.prepareStatement(LOAD_BETS);
@@ -307,29 +285,9 @@ public class DerbyTrackManager
 	}
 	
 	/**
-	 * Save the current lane bet into database.
-	 * @param lane : The lane to affect.
-	 * @param sum : The sum to set.
-	 */
-	protected void saveBet(int lane, long sum)
-	{
-		try (Connection con = ConnectionPool.getConnection();
-			PreparedStatement ps = con.prepareStatement(SAVE_BETS))
-		{
-			ps.setInt(1, lane);
-			ps.setLong(2, sum);
-			ps.execute();
-		}
-		catch (Exception e)
-		{
-			LOGGER.error("Can't save Derby Track bet.", e);
-		}
-	}
-	
-	/**
 	 * Clear all lanes bets, either on database or Map.
 	 */
-	protected void clearBets()
+	private void clearBets()
 	{
 		for (int key : _betsPerLane.keySet())
 			_betsPerLane.put(key, 0L);
@@ -358,13 +316,25 @@ public class DerbyTrackManager
 		_betsPerLane.put(lane, sum);
 		
 		if (saveOnDb)
-			saveBet(lane, sum);
+		{
+			try (Connection con = ConnectionPool.getConnection();
+				PreparedStatement ps = con.prepareStatement(SAVE_BETS))
+			{
+				ps.setInt(1, lane);
+				ps.setLong(2, sum);
+				ps.execute();
+			}
+			catch (Exception e)
+			{
+				LOGGER.error("Can't save Derby Track bet.", e);
+			}
+		}
 	}
 	
 	/**
 	 * Calculate odds for every lane, based on others lanes.
 	 */
-	protected void calculateOdds()
+	private void calculateOdds()
 	{
 		// Clear previous List holding old odds.
 		_odds.clear();
@@ -382,142 +352,116 @@ public class DerbyTrackManager
 			_odds.add((amount == 0) ? 0D : Math.max(1.25, sumOfAllLanes * 0.7 / amount));
 	}
 	
-	private class Announcement implements Runnable
+	private void countdown()
 	{
-		public Announcement()
-		{
-		}
+		if (_finalCountdown > 1200)
+			_finalCountdown = 0;
 		
-		@Override
-		public void run()
+		switch (_finalCountdown)
 		{
-			if (_finalCountdown > 1200)
-				_finalCountdown = 0;
+			case 0:
+				newRace();
+				newSpeeds();
+				
+				_state = RaceState.ACCEPTING_BETS;
+				_packet = new MonRaceInfo(CODES[0][0], CODES[0][1], getRunners(), getSpeeds());
+				
+				ZoneManager.toAllPlayersInZoneType(DerbyTrackZone.class, _packet, SystemMessage.getSystemMessage(SystemMessageId.MONSRACE_TICKETS_AVAILABLE_FOR_S1_RACE).addNumber(_raceNumber));
+				break;
 			
-			switch (_finalCountdown)
-			{
-				case 0:
-					newRace();
-					newSpeeds();
+			case 30, 60, 90, 120, 150, 180, 210, 240, 270, 330, 360, 390, 420, 450, 480, 510, 540, 570, 630, 660, 690, 720, 750, 780, 810, 870: // steps of 30 sec, 1 min to 14 min 30 sec
+				ZoneManager.toAllPlayersInZoneType(DerbyTrackZone.class, SystemMessage.getSystemMessage(SystemMessageId.MONSRACE_TICKETS_NOW_AVAILABLE_FOR_S1_RACE).addNumber(_raceNumber));
+				break;
+			
+			case 300: // 5 min
+				ZoneManager.toAllPlayersInZoneType(DerbyTrackZone.class, SystemMessage.getSystemMessage(SystemMessageId.MONSRACE_TICKETS_NOW_AVAILABLE_FOR_S1_RACE).addNumber(_raceNumber), SystemMessage.getSystemMessage(SystemMessageId.MONSRACE_TICKETS_STOP_IN_S1_MINUTES).addNumber(10));
+				break;
+			
+			case 600: // 10 min
+				ZoneManager.toAllPlayersInZoneType(DerbyTrackZone.class, SystemMessage.getSystemMessage(SystemMessageId.MONSRACE_TICKETS_NOW_AVAILABLE_FOR_S1_RACE).addNumber(_raceNumber), SystemMessage.getSystemMessage(SystemMessageId.MONSRACE_TICKETS_STOP_IN_S1_MINUTES).addNumber(5));
+				break;
+			
+			case 840: // 14 min
+				ZoneManager.toAllPlayersInZoneType(DerbyTrackZone.class, SystemMessage.getSystemMessage(SystemMessageId.MONSRACE_TICKETS_NOW_AVAILABLE_FOR_S1_RACE).addNumber(_raceNumber), SystemMessage.getSystemMessage(SystemMessageId.MONSRACE_TICKETS_STOP_IN_S1_MINUTES).addNumber(1));
+				break;
+			
+			case 900: // 15 min
+				_state = RaceState.WAITING;
+				
+				calculateOdds();
+				
+				ZoneManager.toAllPlayersInZoneType(DerbyTrackZone.class, SystemMessage.getSystemMessage(SystemMessageId.MONSRACE_TICKETS_NOW_AVAILABLE_FOR_S1_RACE).addNumber(_raceNumber), SystemMessage.getSystemMessage(SystemMessageId.MONSRACE_S1_TICKET_SALES_CLOSED));
+				break;
+			
+			case 960, 1020: // 16, 17 min
+				final int minutes = (_finalCountdown == 960) ? 2 : 1;
+				ZoneManager.toAllPlayersInZoneType(DerbyTrackZone.class, SystemMessage.getSystemMessage(SystemMessageId.MONSRACE_S2_BEGINS_IN_S1_MINUTES).addNumber(minutes));
+				break;
+			
+			case 1050: // 17 min 30 sec
+				ZoneManager.toAllPlayersInZoneType(DerbyTrackZone.class, SystemMessage.getSystemMessage(SystemMessageId.MONSRACE_S1_BEGINS_IN_30_SECONDS));
+				break;
+			
+			case 1070: // 17 min 50 sec
+				ZoneManager.toAllPlayersInZoneType(DerbyTrackZone.class, SystemMessage.getSystemMessage(SystemMessageId.MONSRACE_S1_COUNTDOWN_IN_FIVE_SECONDS));
+				break;
+			
+			case 1075, 1076, 1077, 1078, 1079: // 17 min 55, 56, 57, 58, 59 sec
+				final int seconds = 1080 - _finalCountdown;
+				ZoneManager.toAllPlayersInZoneType(DerbyTrackZone.class, SystemMessage.getSystemMessage(SystemMessageId.MONSRACE_BEGINS_IN_S1_SECONDS).addNumber(seconds));
+				break;
+			
+			case 1080: // 18 min
+				_state = RaceState.STARTING_RACE;
+				_packet = new MonRaceInfo(CODES[1][0], CODES[1][1], getRunners(), getSpeeds());
+				
+				ZoneManager.toAllPlayersInZoneType(DerbyTrackZone.class, SystemMessage.getSystemMessage(SystemMessageId.MONSRACE_RACE_START), SOUND_1, SOUND_2, _packet);
+				break;
+			
+			case 1085: // 18 min 5 sec
+				_packet = new MonRaceInfo(CODES[2][0], CODES[2][1], getRunners(), getSpeeds());
+				
+				ZoneManager.toAllPlayersInZoneType(DerbyTrackZone.class, _packet);
+				break;
+			
+			case 1115: // 18 min 35 sec
+				_state = RaceState.RACE_END;
+				
+				// Retrieve current HistoryInfo and populate it with data, then stores it in database.
+				final HistoryInfo info = getHistoryInfo(_raceNumber);
+				if (info != null)
+				{
+					info.setFirst(getFirst());
+					info.setSecond(getSecond());
+					info.setOddRate(_odds.get(getFirst()));
 					
-					_state = RaceState.ACCEPTING_BETS;
-					_packet = new MonRaceInfo(CODES[0][0], CODES[0][1], getRunners(), getSpeeds());
-					
-					ZoneManager.toAllPlayersInZoneType(DerbyTrackZone.class, _packet, SystemMessage.getSystemMessage(SystemMessageId.MONSRACE_TICKETS_AVAILABLE_FOR_S1_RACE).addNumber(_raceNumber));
-					break;
-				
-				case 30: // 30 sec
-				case 60: // 1 min
-				case 90: // 1 min 30 sec
-				case 120: // 2 min
-				case 150: // 2 min 30
-				case 180: // 3 min
-				case 210: // 3 min 30
-				case 240: // 4 min
-				case 270: // 4 min 30 sec
-				case 330: // 5 min 30 sec
-				case 360: // 6 min
-				case 390: // 6 min 30 sec
-				case 420: // 7 min
-				case 450: // 7 min 30
-				case 480: // 8 min
-				case 510: // 8 min 30
-				case 540: // 9 min
-				case 570: // 9 min 30 sec
-				case 630: // 10 min 30 sec
-				case 660: // 11 min
-				case 690: // 11 min 30 sec
-				case 720: // 12 min
-				case 750: // 12 min 30
-				case 780: // 13 min
-				case 810: // 13 min 30
-				case 870: // 14 min 30 sec
-					ZoneManager.toAllPlayersInZoneType(DerbyTrackZone.class, SystemMessage.getSystemMessage(SystemMessageId.MONSRACE_TICKETS_NOW_AVAILABLE_FOR_S1_RACE).addNumber(_raceNumber));
-					break;
-				
-				case 300: // 5 min
-					ZoneManager.toAllPlayersInZoneType(DerbyTrackZone.class, SystemMessage.getSystemMessage(SystemMessageId.MONSRACE_TICKETS_NOW_AVAILABLE_FOR_S1_RACE).addNumber(_raceNumber), SystemMessage.getSystemMessage(SystemMessageId.MONSRACE_TICKETS_STOP_IN_S1_MINUTES).addNumber(10));
-					break;
-				
-				case 600: // 10 min
-					ZoneManager.toAllPlayersInZoneType(DerbyTrackZone.class, SystemMessage.getSystemMessage(SystemMessageId.MONSRACE_TICKETS_NOW_AVAILABLE_FOR_S1_RACE).addNumber(_raceNumber), SystemMessage.getSystemMessage(SystemMessageId.MONSRACE_TICKETS_STOP_IN_S1_MINUTES).addNumber(5));
-					break;
-				
-				case 840: // 14 min
-					ZoneManager.toAllPlayersInZoneType(DerbyTrackZone.class, SystemMessage.getSystemMessage(SystemMessageId.MONSRACE_TICKETS_NOW_AVAILABLE_FOR_S1_RACE).addNumber(_raceNumber), SystemMessage.getSystemMessage(SystemMessageId.MONSRACE_TICKETS_STOP_IN_S1_MINUTES).addNumber(1));
-					break;
-				
-				case 900: // 15 min
-					_state = RaceState.WAITING;
-					
-					calculateOdds();
-					
-					ZoneManager.toAllPlayersInZoneType(DerbyTrackZone.class, SystemMessage.getSystemMessage(SystemMessageId.MONSRACE_TICKETS_NOW_AVAILABLE_FOR_S1_RACE).addNumber(_raceNumber), SystemMessage.getSystemMessage(SystemMessageId.MONSRACE_S1_TICKET_SALES_CLOSED));
-					break;
-				
-				case 960: // 16 min
-				case 1020: // 17 min
-					final int minutes = (_finalCountdown == 960) ? 2 : 1;
-					ZoneManager.toAllPlayersInZoneType(DerbyTrackZone.class, SystemMessage.getSystemMessage(SystemMessageId.MONSRACE_S2_BEGINS_IN_S1_MINUTES).addNumber(minutes));
-					break;
-				
-				case 1050: // 17 min 30 sec
-					ZoneManager.toAllPlayersInZoneType(DerbyTrackZone.class, SystemMessage.getSystemMessage(SystemMessageId.MONSRACE_S1_BEGINS_IN_30_SECONDS));
-					break;
-				
-				case 1070: // 17 min 50 sec
-					ZoneManager.toAllPlayersInZoneType(DerbyTrackZone.class, SystemMessage.getSystemMessage(SystemMessageId.MONSRACE_S1_COUNTDOWN_IN_FIVE_SECONDS));
-					break;
-				
-				case 1075: // 17 min 55 sec
-				case 1076: // 17 min 56 sec
-				case 1077: // 17 min 57 sec
-				case 1078: // 17 min 58 sec
-				case 1079: // 17 min 59 sec
-					final int seconds = 1080 - _finalCountdown;
-					ZoneManager.toAllPlayersInZoneType(DerbyTrackZone.class, SystemMessage.getSystemMessage(SystemMessageId.MONSRACE_BEGINS_IN_S1_SECONDS).addNumber(seconds));
-					break;
-				
-				case 1080: // 18 min
-					_state = RaceState.STARTING_RACE;
-					_packet = new MonRaceInfo(CODES[1][0], CODES[1][1], getRunners(), getSpeeds());
-					
-					ZoneManager.toAllPlayersInZoneType(DerbyTrackZone.class, SystemMessage.getSystemMessage(SystemMessageId.MONSRACE_RACE_START), SOUND_1, SOUND_2, _packet);
-					break;
-				
-				case 1085: // 18 min 5 sec
-					_packet = new MonRaceInfo(CODES[2][0], CODES[2][1], getRunners(), getSpeeds());
-					
-					ZoneManager.toAllPlayersInZoneType(DerbyTrackZone.class, _packet);
-					break;
-				
-				case 1115: // 18 min 35 sec
-					_state = RaceState.RACE_END;
-					
-					// Retrieve current HistoryInfo and populate it with data, then stores it in database.
-					final HistoryInfo info = getHistoryInfo(_raceNumber);
-					if (info != null)
+					try (Connection con = ConnectionPool.getConnection();
+						PreparedStatement ps = con.prepareStatement(SAVE_HISTORY))
 					{
-						info.setFirst(getFirst());
-						info.setSecond(getSecond());
-						info.setOddRate(_odds.get(getFirst()));
-						
-						saveHistory(info);
+						ps.setInt(1, info.getRaceId());
+						ps.setInt(2, info.getFirst());
+						ps.setInt(3, info.getSecond());
+						ps.setDouble(4, info.getOddRate());
+						ps.execute();
 					}
-					
-					// Clear bets.
-					clearBets();
-					
-					ZoneManager.toAllPlayersInZoneType(DerbyTrackZone.class, SystemMessage.getSystemMessage(SystemMessageId.MONSRACE_FIRST_PLACE_S1_SECOND_S2).addNumber(getFirst() + 1).addNumber(getSecond() + 1), SystemMessage.getSystemMessage(SystemMessageId.MONSRACE_S1_RACE_END).addNumber(_raceNumber));
-					_raceNumber++;
-					break;
+					catch (Exception e)
+					{
+						LOGGER.error("Can't save Derby Track history.", e);
+					}
+				}
 				
-				case 1140: // 19 min
-					ZoneManager.toAllPlayersInZoneType(DerbyTrackZone.class, new DeleteObject(getRunners().get(0)), new DeleteObject(getRunners().get(1)), new DeleteObject(getRunners().get(2)), new DeleteObject(getRunners().get(3)), new DeleteObject(getRunners().get(4)), new DeleteObject(getRunners().get(5)), new DeleteObject(getRunners().get(6)), new DeleteObject(getRunners().get(7)));
-					break;
-			}
-			_finalCountdown += 1;
+				// Clear bets.
+				clearBets();
+				
+				ZoneManager.toAllPlayersInZoneType(DerbyTrackZone.class, SystemMessage.getSystemMessage(SystemMessageId.MONSRACE_FIRST_PLACE_S1_SECOND_S2).addNumber(getFirst() + 1).addNumber(getSecond() + 1), SystemMessage.getSystemMessage(SystemMessageId.MONSRACE_S1_RACE_END).addNumber(_raceNumber));
+				_raceNumber++;
+				break;
+			
+			case 1140: // 19 min
+				ZoneManager.toAllPlayersInZoneType(DerbyTrackZone.class, new DeleteObject(getRunners().get(0)), new DeleteObject(getRunners().get(1)), new DeleteObject(getRunners().get(2)), new DeleteObject(getRunners().get(3)), new DeleteObject(getRunners().get(4)), new DeleteObject(getRunners().get(5)), new DeleteObject(getRunners().get(6)), new DeleteObject(getRunners().get(7)));
+				break;
 		}
+		_finalCountdown += 1;
 	}
 	
 	public static DerbyTrackManager getInstance()
