@@ -1,11 +1,10 @@
 package net.sf.l2j.gameserver.network.serverpackets;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import net.sf.l2j.gameserver.data.xml.HennaData;
 import net.sf.l2j.gameserver.model.actor.Player;
-import net.sf.l2j.gameserver.model.item.Henna;
+import net.sf.l2j.gameserver.model.records.Henna;
 
 public class HennaEquipList extends L2GameServerPacket
 {
@@ -17,7 +16,7 @@ public class HennaEquipList extends L2GameServerPacket
 	{
 		_adena = player.getAdena();
 		_maxHennas = player.getHennaList().getMaxSize();
-		_availableHennas = HennaData.getInstance().getHennas().stream().filter(h -> h.canBeUsedBy(player) && player.getInventory().getItemByItemId(h.getDyeId()) != null).collect(Collectors.toList());
+		_availableHennas = HennaData.getInstance().getHennas().stream().filter(h -> h.canBeUsedBy(player) && player.getInventory().getItemByItemId(h.dyeId()) != null).toList();
 	}
 	
 	@Override
@@ -30,10 +29,10 @@ public class HennaEquipList extends L2GameServerPacket
 		
 		for (Henna temp : _availableHennas)
 		{
-			writeD(temp.getSymbolId());
-			writeD(temp.getDyeId());
+			writeD(temp.symbolId());
+			writeD(temp.dyeId());
 			writeD(Henna.DRAW_AMOUNT);
-			writeD(temp.getDrawPrice());
+			writeD(temp.drawPrice());
 			writeD(1);
 		}
 	}
