@@ -1,18 +1,17 @@
 package net.sf.l2j.gameserver.network.serverpackets;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import net.sf.l2j.gameserver.model.actor.Player;
-import net.sf.l2j.gameserver.model.holder.Timestamp;
+import net.sf.l2j.gameserver.model.records.Timestamp;
 
 public class SkillCoolTime extends L2GameServerPacket
 {
-	public List<Timestamp> _reuseTimeStamps;
+	public final List<Timestamp> _reuseTimeStamps;
 	
 	public SkillCoolTime(Player cha)
 	{
-		_reuseTimeStamps = cha.getReuseTimeStamps().stream().filter(r -> r.hasNotPassed()).collect(Collectors.toList());
+		_reuseTimeStamps = cha.getReuseTimeStamps().stream().filter(r -> r.hasNotPassed()).toList();
 	}
 	
 	@Override
@@ -22,9 +21,9 @@ public class SkillCoolTime extends L2GameServerPacket
 		writeD(_reuseTimeStamps.size()); // list size
 		for (Timestamp ts : _reuseTimeStamps)
 		{
-			writeD(ts.getId());
-			writeD(ts.getValue());
-			writeD((int) ts.getReuse() / 1000);
+			writeD(ts.skillId());
+			writeD(ts.skillLevel());
+			writeD((int) ts.reuse() / 1000);
 			writeD((int) ts.getRemaining() / 1000);
 		}
 	}
